# ChaosModV

./: ARCHITECTURE.md  DISABLING_BUILTIN_EFFECTS.md  IMPLEMENTATION_SUMMARY.md  PLUGIN_DEVELOPMENT.md  PLUGIN_QUICKSTART.md  README.md  REFACTORING_COMPLETE.md  SECURITY.md
ChaosMod/: Main.cpp
ChaosMod/Components/: EffectPluginLoader.cpp  EffectPluginLoader.h
ChaosMod/Effects/: EffectPluginAPI.h
SampleEffectPlugin/: CMakeLists.txt  README.md  SamplePlugin.cpp
